--- a/index.html
+++ b/index.html
@@ -26,12 +26,99 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Golding Coffee Shop Logo"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li>
+              <a href="#recipes" class="nav__link">Recipes</a>
+            </li>
+            <li>
+              <a href="#bookatable" class="nav__link">Book a table</a>
+            </li>
+            <li>
+              <a href="#menu" class="nav__link">Menu</a>
+            </li>
+            <li>
+              <a href="#contacts" class="nav__link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="header__span-accent">Specialty coffee</span>in the Triple
+          Peaks Library
+        </h1>
+        <p class="header__description">
+          Welcome to our study zone! We've got the coffee to energize you and
+          the cozy vibes to help you get creative.
+        </p>
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="inside of the coffee shop"
+          class="header__image"
+        />
+        <div class="header__footer">
+          <div>
+            <p class="header__paragragh">Hours:</p>
+            <p class="header__paragragh">
+              Monday&ndash;Friday (10:00&ndash;19:00)
+            </p>
+            <p class="header__paragragh">
+              Saturday&ndash;Sunday (11:00&ndash;18:00)
+            </p>
+          </div>
+          <p class="header__paragragh">
+            200 Success Avenue, The Town of Triple Peaks
+          </p>
+        </div>
+      </header>
+      <!--  -->
       <main class="content">
-        <section class="recipes"></section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section id="recipes" class="recipes">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convenience:
+          </p>
+          <ul class="recipes__videos">
+            <li>
+              <iframe
+                class="recipes__iframe-container"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=dxMunkPCb6N2J9OO"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>Aeropress recipe</span> <span>~5min</span>
+              </p>
+            </li>
+
+            <li>
+              <iframe
+                class="recipes__iframe-container"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=LFGXYfS6bUiCdKn2"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              >
+              </iframe>
+              <p class="recipes__video-caption">
+                <span>French press recipe</span> <span>~15min</span>
+              </p>
+            </li>
+          </ul>
+        </section>
+        <!--  -->
+        <section id="bookatable" class="bookatable"></section>
+        <section id="menu" class="menu"></section>
+        <section id="contacts" class="contacts"></section>
       </main>
       <footer class="footer"></footer>
     </div>
