--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <ul class="recipes__videos">
             <li>
               <iframe
-                class="recipes__iframe-container"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=dxMunkPCb6N2J9OO"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -101,7 +101,7 @@
 
             <li>
               <iframe
-                class="recipes__iframe-container"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=LFGXYfS6bUiCdKn2"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
