New update for my project - stage 3 complete

--- a/index.html
+++ b/index.html
@@ -116,7 +116,62 @@
           </ul>
         </section>
         <!--  -->
-        <section id="bookatable" class="bookatable"></section>
+        <section id="bookatable" class="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name-input" class="form__label">
+                Name *
+                <input
+                  class="form__input"
+                  id="name-input"
+                  type="text"
+                  placeholder="Name Surname"
+                  required
+                />
+              </label>
+              <label for="guest-input" class="form__label">
+                Number of guests *
+                <input
+                  class="form__input"
+                  id="guests-input"
+                  type="number"
+                  min="1"
+                  max="8"
+                  placeholder="1-8"
+                  required
+                />
+              </label>
+              <label for="datetime-input" class="form__label">
+                Date & time *
+                <input
+                  class="form__input"
+                  id="datetime-input"
+                  type="datetime-local"
+                  required
+                />
+              </label>
+              <label for="email-input" class="form__label">
+                Your email *
+                <input
+                  class="form__input"
+                  id="email-input"
+                  type="email"
+                  placeholder="email@email.com"
+                />
+              </label>
+            </fieldset>
+            <button class="form__button">Book a table</button>
+            <label
+              for="terms-input"
+              class="form__label form__label_type_checkbox"
+            >
+              <input class="form__checkbox" id="terms-input" type="checkbox" />
+              I agree with the terms of use
+            </label>
+          </form>
+        </section>
+        <!--  -->
         <section id="menu" class="menu"></section>
         <section id="contacts" class="contacts"></section>
       </main>
