New update for my project - stage 3.1 complete

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   required
                 />
               </label>
-              <label for="guest-input" class="form__label">
+              <label for="guests-input" class="form__label">
                 Number of guests *
                 <input
                   class="form__input"
